# boost.http

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.adoc  README.adoc  README.md  appveyor.yml  index.html
doc/: .gitignore  CMakeLists.txt  Doxyfile  Jamfile.v2  Makefile  beast_parser_tutorial.adoc  bnf.tex  design.adoc  design.qbk  http.adoc  http.qbk  introduction.qbk  message_framework_tutorial.adoc  parsing_tutorial1.adoc  parsing_tutorial1.cpp  parsing_tutorial1b.cpp  parsing_tutorial1c.cpp  parsing_tutorial1d.cpp  parsing_tutorial1e.cpp  parsing_tutorial1f.cpp  parsing_tutorial1g.cpp  parsing_tutorial1h.cpp  parsing_tutorial2.adoc  parsing_tutorial3.adoc  poly_handlers.adoc  poly_handlers1.cpp  poly_handlers2.cpp  poly_handlers3.cpp  poly_handlers4.cpp  poly_handlers5.cpp  poly_handlers6.cpp  poly_handlers7.cpp  read_state.tex  reference.adoc  reference.qbk  request handling.tex  request.tex  tufao.cpp  tufao2.cpp  tutorial.adoc  (+6 more)
doc/extraheaders/: httpnamespace.hpp
doc/ref/: algorithm_header.adoc  algorithm_header.qbk  async_response_transmit_dir.adoc  async_response_transmit_dir.qbk  async_response_transmit_file.adoc  async_response_transmit_file.qbk  async_write_response.adoc  async_write_response.qbk  async_write_response_metadata.adoc  async_write_response_metadata.qbk  basic_buffered_socket.adoc  basic_buffered_socket.qbk  basic_message.adoc  basic_message.qbk  basic_poly_client_socket.adoc  basic_poly_server_socket.adoc  basic_poly_socket.adoc  basic_poly_socket_base.adoc  basic_polymorphic_server_socket.adoc  basic_polymorphic_server_socket.qbk  basic_polymorphic_socket_base.adoc  basic_polymorphic_socket_base.qbk  basic_request.adoc  basic_response.adoc  basic_router.adoc  basic_router_header.adoc  basic_socket.adoc  basic_socket.qbk  buffered_socket.adoc  buffered_socket.qbk  buffered_socket_header.adoc  buffered_socket_header.qbk  client_socket_adaptor.adoc  client_socket_adaptor_header.adoc  client_socket_concept.adoc  etag_match_strong.adoc  etag_match_strong.qbk  etag_match_weak.adoc  etag_match_weak.qbk  file_server_errc.adoc  (+148 more)
example/: CMakeLists.txt  basic_router.cpp  filesystem_router.cpp  regex_router.cpp  spawn-chunked.cpp  spawn-fileserver.cpp  spawn-fileserver2.cpp  spawn-settings.cpp  spawn-with-runtime.cpp  spawn-with-runtime2.cpp  spawn-with-runtime3.cpp  spawn-with-runtime4.cpp  spawn.cpp
include/: CMakeLists.txt
include/boost/http/: algorithm.hpp  basic_message.hpp  basic_router.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  buffered_socket.hpp  client_socket_adaptor.hpp  client_socket_adaptor.ipp  embedded_server_socket-inl.hpp  embedded_server_socket.hpp  embedded_server_socket_acceptor.hpp  file_server.hpp  filesystem_router.hpp  headers.hpp  http_category.hpp  http_errc.hpp  incoming_state.hpp  message-inl.hpp  message.hpp  outgoing_state.hpp  poly_client_socket.hpp  poly_client_socket.ipp  poly_server_socket.hpp  poly_server_socket.ipp  poly_socket.hpp  poly_socket_base.hpp  poly_socket_base.ipp  polymorphic_server_socket-inl.hpp  polymorphic_server_socket.hpp  polymorphic_socket_base-inl.hpp  polymorphic_socket_base.hpp  polymorphic_socket_base.ipp  read_state.hpp  reader-inl.hpp  reader.hpp  regex_router.hpp  request.hpp  request.ipp  request_response_wrapper.hpp  request_response_wrapper.ipp  (+18 more)
include/boost/http/algorithm/: header.hpp  query.hpp  write.hpp
include/boost/http/algorithm/header/: header_value_any_of.hpp
include/boost/http/asio/experimental/: poly_handler.hpp
include/boost/http/detail/: atomic_field_parser.hpp  config.hpp  constchar_helper.hpp  count_decdigits.hpp  count_hexdigits.hpp  macros.hpp  outgoing_writer_helper.hpp  singleton.hpp  writer_helper.hpp
include/boost/http/embedded_server/: embedded_server.hpp  embedded_server_socket.hpp  embedded_server_socket_acceptor.hpp
include/boost/http/reader/: request.hpp  request.ipp  response.hpp  response.ipp
include/boost/http/reader/detail/: abnf.hpp  common.hpp  transfer_encoding.hpp
include/boost/http/syntax/: chunk_size.hpp  chunk_size.ipp  content_length.hpp  content_length.ipp  crlf.hpp  crlf.ipp  field_name.hpp  field_name.ipp  field_value.hpp  field_value.ipp  ows.hpp  ows.ipp  reason_phrase.hpp  reason_phrase.ipp  status_code.hpp  status_code.ipp
include/boost/http/syntax/detail/: is_digit.hpp  is_obs_text.hpp  is_ows.hpp  is_vchar.hpp
src/: CMakeLists.txt  embedded_server_socket.cpp  embedded_server_socket_acceptor.cpp  file_server.cpp  http_category.cpp  socket.cpp
src/embedded_server/: embedded_server_socket.cpp  embedded_server_socket_acceptor.cpp
src/example/: CMakeLists.txt  spawn-chunked.cpp  spawn-fileserver.cpp  spawn-fileserver2.cpp  spawn-with-runtime.cpp  spawn-with-runtime2.cpp  spawn.cpp
src/tests/: CMakeLists.txt  algorithm.cpp  datetime.cpp  errc.cpp  firsttest.cpp  socket.cpp  socket_concept.cpp
test/: CMakeLists.txt  algorithm.cpp  chunk_size.cpp  client_socket.cpp  common.cpp  common.hpp  content_length.cpp  datetime.cpp  errc.cpp  file_server.cpp  mocksocket.cpp  mocksocket.hpp  parser_dont_violate_odr.cpp  request.cpp  request11.cpp  request_bad.cpp  request_bad_a.cpp  request_bad_b.cpp  request_good.cpp  request_response_common.cpp  request_response_wrapper.cpp  response.cpp  routing.cpp  socket.cpp  socket_chunkext.cpp  socket_state.cpp  suite.cpp  suite11.cpp  traits.cpp  unit_test.hpp  utils.cpp
test/utils/: fiber_baton.hpp  get_socket_pair.hpp
